# pipa

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  Manual.md  PATH_VERIFICATION_REPORT.md  README.md  ROADMAP.md  draft.md  edit-git-log.sh  pipa.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  setup.sh  setup_env.sh  spec_info.yaml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-documentation_issue.yml
.github/workflows/: docs.yml  main.yml
.hooks/: check_inline_comments.py
asset/: ShowMeYourPIPA.json  config-remote-profile.yaml  config-template.yaml  config-upload.yaml  emon_events_all.config
asset/ShowMeYourPIPA/: .env  docker-compose.yml  start.sh
config/events/: aarch64.yaml  kunpeng-920.yaml  x86_64.yaml
config/rules/: decision_tree.yaml
config/workloads/: mysql.yaml  stress_cpu.yaml  stress_io.yaml
doc/: API-reference.md  Development.md  PIPAvsPAPI.md  User-guide.md  development.md  mcp.md  quick-start.md  quick-start_zh_cn.md
docs/: VARIABLE_SYSTEM.md
examples/: analyze_log_flusher.py  analyze_mysqld.py
pipa/common/: logger.py  utils.py
pipa/export_config/: py_config.py  sys_config.py
pipa/parser/: perf_stat.py  sar.py
pipa/service/: __init__.py  generate_shell_script.py  init.py
script/: export-configuration.sh  flamegraph.py  load_perf_data_sqlite.py  mcp_client.py  pipa-collect.sh  pipa-parse.sh  stackcollapse_perf.py
script/pipa-tree/: INSTALL.md  install.sh  pipa-tree  uninstall.sh
showcases/: MIGRATION_GUIDE.md  safety-guard.sh
showcases/elasticsearch/: README.md  download_data.sh  env.sh  run_load.sh  setup.sh  start_es.sh  stop_es.sh  ultimate_es_test.sh
showcases/elasticsearch_cpu_intensive/: run_load.sh  ultimate_es_test.sh
showcases/io_intensive/: README.md  env.sh  prepare_data.sh  run_load.sh  setup.sh  ultimate_io_test.sh
showcases/mysql/: README.md  env.sh  force_rebuild.sh  mysql_collectors.yaml  run_sysbench.sh  run_with_profile.sh  setup.sh  start_mysql.sh  stop_mysql.sh  stop_mysql_force.sh  stop_mysql_graceful.sh  ultimate_mysql_test.sh  workload.yaml
showcases/mysql_sysbench_huawei/: README.md  env.sh  force_rebuild.sh  initialize.sh  run_sysbench.sh  run_with_profile.sh  setup.sh  start_mysql.sh  stop_mysql_graceful.sh
showcases/nginx/: 2_start_nginx_server.sh  README.md  env.sh  run_load.sh  run_performance_collection.sh  run_single_benchmark.sh  setup.sh  setup_nginx_env.sh  (+3 more)
src/: collector.py  config_loader.py  executor.py  logger_setup.py  pipa.py  static_collector.py  utils.py
test/: conftest.py  test_cmd.py  test_common.py  test_export.py  test_export_pipashu_config_template.py  test_flamegraph_advanced.py  test_flamegraph_analyzer.py  test_flamegraph_subset.py  test_flamegraph_trie.py  test_mcp_flamegraph.py  test_parse_one_line.py  test_parse_perf_report.py  test_parse_perf_script.py  test_parse_perf_stat.py  test_parse_sar.py  test_perf_script.py  test_perf_stat.py  test_pipashu_config.py  test_sar.py  test_service_generate_common.py  test_service_remote.py  test_stackcollapse_perf.py
tests/: test_collector.py  test_static_collector.py
(+215 files in other folders)
