[project]
name = "pipa"
version = "0.1.0"
description = "Performance Analytics & Calibration Engine"
requires-python = ">=3.10"
dependencies = [
    "click~=8.3",
    "pyyaml~=6.0",
    "pandas~=2.3",
    "numpy~=2.3",
    "tabulate~=0.9",
    "Jinja2~=3.1",
    "plotly~=6.4",
    "markdown-it-py~=4.0",
    "black~=25.9",
    "flake8~=7.3",
    "flake8-black~=0.4",
    "isort~=7.0",
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pre-commit~=4.3",
    "pip-tools~=7.5",
]

[project.scripts]
pipa = "src.pipa:cli"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (requires external dependencies like perf)",
]
# 如果需要集成测试同时运行，请`pytest -m "integration or not integration"`
