[project]
name = "pipa"
version = "0.3.2"
description = "Performance Analytics & Calibration Engine"
requires-python = ">=3.9"
# 使用 uv pip compile pyproject.toml --index-url=https://mirrors.aliyun.com/pypi/simple/ -o requirements.txt 来生成 requirements.txt锁定依赖版本
dependencies = [
    "uv~=0.9",
    "click~=8.1",
    "pyyaml~=6.0",
    "pandas>=1.5,<2.3",
    "numpy>=1.21,<2.0",
    "tabulate~=0.9",
    "Jinja2~=3.1",
    "plotly~=5.15",
    "markdown-it-py~=3.0",
    "black~=24.0",
    "flake8~=7.0",
    "flake8-black~=0.3",
    "isort>=5.10,<6.0",
    "pytest~=7.4",
    "pytest-cov~=5.0",
    "pre-commit~=3.0",
    "pip-tools~=7.4",
    "scikit-learn>=1.0,<2.0",
    "kneed>=0.8,<1.0",
]

[project.scripts]
pipa = "src.pipa.cli:cli"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"] # 扩展目标版本

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (requires external dependencies like perf)",
]
# 如果需要集成测试同时运行，请`pytest -m "integration or not integration"`
